--- a/mylibrary/src/main/res/layout/activity_image_bucket_hj_pickphoto.xml
+++ b/mylibrary/src/main/res/layout/activity_image_bucket_hj_pickphoto.xml
@@ -6,22 +6,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ImageBucketActivity">
-    <androidx.appcompat.widget.Toolbar
+    <LinearLayout
         android:layout_width="match_parent"
-        android:id="@+id/bucket_toolbar_hj_pickphoto"
         android:layout_height="?attr/actionBarSize"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:orientation="horizontal"
         android:background="@color/colorPrimary"
-        app:layout_constraintRight_toRightOf="parent"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:layout_constraintTop_toTopOf="parent"
-        app:title="相册列表"
-        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
-        />
+        >
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="10dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_arrow_back_white_24dp"
+            android:onClick="back"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="请选择照片"
+            android:textSize="16sp"
+            android:layout_gravity="center_vertical"
+            android:textColor="@android:color/white"
+            android:layout_marginLeft="20dp"
+            android:id="@+id/bucket_title_hj_pickphoto"
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="确定"
+            android:id="@+id/confirm_btn_hj_pickphoto"
+            android:layout_gravity="center_vertical"
+            android:textColor="@android:color/white"
+            android:background="@color/colorPrimary"
+            android:layout_marginStart="150dp"
+            android:visibility="gone"
+            />
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/bucketRecyclerView_hj_pickphoto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-  />
+        android:layout_height="match_parent" />
 </LinearLayout>
