--- a/mylibrary/src/main/res/layout/recycler_item_hj_pickphoto.xml
+++ b/mylibrary/src/main/res/layout/recycler_item_hj_pickphoto.xml
@@ -4,9 +4,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_width="80dp"
         android:layout_margin="5dp"
         android:id="@+id/imageView_hj_pickphoto"
         android:scaleType="matrix"
-        android:layout_height="match_parent" />
+        android:layout_height="80dp" />
 </LinearLayout>
