--- a/app/src/main/res/xml/file_path.xml
+++ b/app/src/main/res/xml/file_path.xml
@@ -3,5 +3,7 @@
         <external-path
             name="my_images"
             path=""/>
-
+<!--        <external-path-->
+<!--            name="my_images"-->
+<!--            path="Android/data/${applicationId}/files/Pictures"/>-->
 </paths>
